fixed email input border on mobile

--- a/_scss/_custom.sass
+++ b/_scss/_custom.sass
@@ -358,8 +358,9 @@ body
             border-right: 0
           @media screen and (max-width: 548px)
             border-right: 3px solid $redblack
-          @media screen and (max-width: 400px)
+          @media screen and (max-width: 414px)
             border-right: 0
+            width: 100%
         &:nth-child(1)
           @media screen and (max-width: 548px)
             border-right: 0
